MDEV-23318 Assertion `cache_empty(keycache)' failed in prepare_resize_simple_key_cache

The reason was that during MyISAM parallel repair two threads used the
same changed TABLE object to compute virtual columns

Fixed by adding a mutex in compute_vcols()